Replace accessMode by accessModes for PVCs
Signed-off-by: Etienne Barbier <etienne.barbier@outlook.fr>

--- a/charts/jellyfin/values.yaml
+++ b/charts/jellyfin/values.yaml
@@ -67,8 +67,8 @@ persistence:
     storageClass: ""
     annotations: {}
     existingClaim: ""
-    accessMode: ReadWriteOnce
-    accessModes: []
+    accessModes:
+      - ReadWriteOnce
     size: 100Mi
     volumeName: ""
 
@@ -83,8 +83,8 @@ persistence:
     storageClass: ""
     annotations: {}
     existingClaim: ""
-    accessMode: ReadWriteOnce
-    accessModes: []
+    accessModes:
+      - ReadWriteOnce
     size: 10Gi
     volumeName: ""
 
