--- a/charts/tvheadend/values.yaml
+++ b/charts/tvheadend/values.yaml
@@ -72,8 +72,8 @@ persistence:
     storageClass: ""
     annotations: {}
     existingClaim: ""
-    accessMode: ReadWriteOnce
-    accessModes: []
+    accessModes:
+      - ReadWriteOnce
     size: 100Mi
     volumeName: ""
 
@@ -88,8 +88,8 @@ persistence:
     storageClass: ""
     annotations: {}
     existingClaim: ""
-    accessMode: ReadWriteOnce
-    accessModes: []
+    accessModes:
+      - ReadWriteOnce
     size: 10Gi
     volumeName: ""
 
