--- a/charts/jellyfin/templates/pvc-cache.yaml
+++ b/charts/jellyfin/templates/pvc-cache.yaml
@@ -7,7 +7,7 @@ metadata:
     {{- include "jellyfin.labels" . | nindent 4 }}
 spec:
   accessModes:
-    - {{ .Values.persistence.cache.accessMode | quote }}
+    {{ toYaml .Values.persistence.cache.accessModes | indent 4 }}
   resources:
     requests:
       storage: {{ .Values.persistence.cache.size | quote }}
