--- a/charts/jellyseerr/templates/pvc.yaml
+++ b/charts/jellyseerr/templates/pvc.yaml
@@ -7,7 +7,7 @@ metadata:
     {{- include "jellyseerr.labels" . | nindent 4 }}
 spec:
   accessModes:
-    - {{ .Values.persistence.accessMode | quote }}
+    {{ toYaml .Values.persistence.accessModes | indent 4 }}
   resources:
     requests:
       storage: {{ .Values.persistence.size | quote }}
