--- a/charts/jellyseerr/values.yaml
+++ b/charts/jellyseerr/values.yaml
@@ -68,8 +68,8 @@ persistence:
   storageClass: ""
   annotations: {}
   existingClaim: ""
-  accessMode: ReadWriteOnce
-  accessModes: []
+  accessModes:
+    - ReadWriteOnce
   size: 100Mi
   volumeName: ""
 
