--- a/charts/lidarr/templates/pvc-config.yaml
+++ b/charts/lidarr/templates/pvc-config.yaml
@@ -7,7 +7,7 @@ metadata:
     {{- include "lidarr.labels" . | nindent 4 }}
 spec:
   accessModes:
-    - {{ .Values.persistence.config.accessMode | quote }}
+    {{ toYaml .Values.persistence.config.accessModes | indent 4 }}
   resources:
     requests:
       storage: {{ .Values.persistence.config.size | quote }}
