--- a/charts/radarr/values.yaml
+++ b/charts/radarr/values.yaml
@@ -79,8 +79,8 @@ persistence:
     storageClass: ""
     annotations: {}
     existingClaim: ""
-    accessMode: ReadWriteOnce
-    accessModes: []
+    accessModes:
+      - ReadWriteOnce
     size: 100Mi
     volumeName: ""
 
