Update applications versions
Signed-off-by: Etienne Barbier <etienne.barbier@outlook.fr>

--- a/charts/prowlarr/values.yaml
+++ b/charts/prowlarr/values.yaml
@@ -55,17 +55,9 @@ ingress:
   #    hosts:
   #      - chart-example.local
 
-extraVolumes:
-  - name: tvseries
-    emptyDir: {}
-  - name: downloads
-    emptyDir: {}
+extraVolumes: []
 
-extraVolumeMounts:
-  - mountPath: /tv
-    name: tvseries
-  - mountPath: /downloads
-    name: downloads
+extraVolumeMounts: []
 
 persistence:
   config:
