--- a/charts/airsonic/templates/deployment.yaml
+++ b/charts/airsonic/templates/deployment.yaml
@@ -110,3 +110,6 @@ spec:
           {{- else }}
           emptyDir: {}
           {{- end }}
+        {{- if .Values.extraVolumes }}
+        {{ toYaml .Values.extraVolumes | nindent 8 }}
+        {{- end }}
