--- a/charts/joal/templates/deployment.yaml
+++ b/charts/joal/templates/deployment.yaml
@@ -138,3 +138,6 @@ spec:
           {{- else }}
           emptyDir: {}
           {{- end }}
+        {{- if .Values.extraVolumes }}
+        {{ toYaml .Values.extraVolumes | nindent 8 }}
+        {{- end }}
