plex: Add serviceAnnotations
Signed-off-by: Etienne Barbier <etienne.barbier@outlook.fr>

--- a/charts/plex/templates/service.yaml
+++ b/charts/plex/templates/service.yaml
@@ -4,6 +4,8 @@ metadata:
   name: {{ include "plex.fullname" . }}
   labels:
     {{- include "plex.labels" . | nindent 4 }}
+  annotations:
+    {{ .Values.serviceAnnotations | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
