--- a/charts/plex/templates/service.yaml
+++ b/charts/plex/templates/service.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     {{- include "plex.labels" . | nindent 4 }}
   annotations:
-    {{ .Values.serviceAnnotations | nindent 4 }}
+    {{- toYaml .Values.serviceAnnotations | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
