--- a/charts/airsonic/templates/deployment.yaml
+++ b/charts/airsonic/templates/deployment.yaml
@@ -106,7 +106,7 @@ spec:
         - name: data
           {{- if .Values.persistence.data.enabled }}
           persistentVolumeClaim:
-            claimName: {{ .Values.persistence.data.existingClaim | default ( printf "%s" (include "airsonic.fullname" .) ) }}
+            claimName: {{ .Values.persistence.data.existingClaim | default ( printf "%s-%s" (include "airsonic.fullname" .) "data" ) }}
           {{- else }}
           emptyDir: {}
           {{- end }}
