--- a/charts/joal/templates/deployment.yaml
+++ b/charts/joal/templates/deployment.yaml
@@ -134,7 +134,7 @@ spec:
         - name: data
           {{- if .Values.persistence.data.enabled }}
           persistentVolumeClaim:
-            claimName: {{ .Values.persistence.data.existingClaim | default ( printf "%s" (include "joal.fullname" .) ) }}
+            claimName: {{ .Values.persistence.data.existingClaim | default ( printf "%s-%s" (include "joal.fullname" .) "data" ) }}
           {{- else }}
           emptyDir: {}
           {{- end }}
