--- a/charts/transmission/templates/deployment.yaml
+++ b/charts/transmission/templates/deployment.yaml
@@ -168,7 +168,7 @@ spec:
         - name: config
           {{- if .Values.persistence.config.enabled }}
           persistentVolumeClaim:
-            claimName: {{ .Values.persistence.config.existingClaim | default ( printf "%s" (include "transmission.fullname" .) ) }}
+            claimName: {{ .Values.persistence.config.existingClaim | default ( printf "%s-%s" (include "transmission.fullname" .) "data" ) }}
           {{- else }}
           emptyDir: {}
           {{- end }}
