--- a/charts/airsonic/values.yaml
+++ b/charts/airsonic/values.yaml
@@ -108,6 +108,9 @@ persistence:
       - ReadWriteOnce
     size: 100Mi
     volumeName: ""
+    dataSource: {}
+    dataSourceRef: {}
+    keepOnUninstall: false
 
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
